k8s/redis-commander/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  namespace: redisdb
  labels:
    app: redis-commander
    tier: backend
spec:
  ports:
    - port: 8081
      targetPort: redis-commander
      name: redis-commander
  type: LoadBalancer
  selector:
    app: redis-commander
    tier: backend
